Custom scrollbar fix

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -85,6 +85,7 @@ html {
 /* Track */
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
+    background-color: #FFF;
 }
 
 /* Handle */
